<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Otlob</string>
    <string name="intro">Don\'t care about your mail cause we care just otlob ;)  </string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="app_logo">app_logo</string>
    <string name="phone_number">Phone Number</string>
    <string name="password">password</string>
    <string name="phone_number1">01202250853</string>
    <string name="password1">1234</string>
    <string name="name">Collection</string>
    <string name="name1">Name</string>
    <string name="title_activity_home">Home</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
</resources>
